# gnome-battery-charge-manager

./: README.md  meson.build
data/: org.gnome.BatteryChargeManager.gschema.xml
rules/: 99-charge-control-end-threshold.rules
services/: enable.sh  gnome-battery-charge-manager.service  udev-power-supply-trigger.service
src/: main.c  meson.build
